@@ -6,7 +6,7 @@
         <property name="portNumber" value="3306"/>
         <property name="databaseName" value="urerp"/>
         <property name="User" value="root"/>
-        <property name="Password" value=""/>
+        <property name="Password" value="elise"/>
         <property name="URL" value="jdbc:mysql://localhost:3306/urerp?zeroDateTimeBehavior=convertToNull"/>
         <property name="driverClass" value="com.mysql.jdbc.Driver"/>
     </jdbc-connection-pool>
