@@ -18,7 +18,7 @@ and open the template in the editor.
         <ui:define name="content">
             <h:form id="venteList">
                 <h:panelGrid columns="1" cellpadding="5" style="width: 100%">
-                    <p:dataTable id="dataTable" var="fonction" value="#{venteListBean.allVentes}"
+                    <p:dataTable id="dataTable" var="vente" value="#{venteListBean.allVentes}"
                                  rowKey="#{vente.id}" selection="#{venteListBean.vente}" selectionMode="single"
                                  paginator="true" paginatorPosition="bottom" rows="10" rowsPerPageTemplate="2,5,10,15"
                                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}
@@ -33,14 +33,14 @@ and open the template in the editor.
                             <f:facet name="header">  
                                 <h:outputText value="#{msg['urerp.view.vente.numero']}" />  
                             </f:facet>
-                            <h:outputText value="#{venteBean.vente.numero}" /> 
+                            <h:outputText value="#{vente.numero}" /> 
                         </p:column>
 
                         <p:column>  
                             <f:facet name="header">  
                                 <h:outputText value="#{msg['urerp.view.vente.date']}" />  
                             </f:facet>
-                            <h:outputText value="#{venteBean.vente.dateOperation}" /> 
+                            <h:outputText value="#{vente.dateOperation}" /> 
                         </p:column>
                     </p:dataTable>
 
