@@ -28,7 +28,7 @@ and open the template in the editor.
 
                             <p:outputLabel value="#{msg['urerp.view.vente.date']}"/>
                             <h:outputText id="dateVente" value="#{venteBean.vente.dateOperation}">
-                                <f:convertDateTime pattern="jj/mm/yyyy" />
+                                <f:convertDateTime pattern="dd/mm/yyyy" />
                             </h:outputText>
                         </p:panelGrid>
                     </p:fieldset>
